--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Student Form</title>
-</head>
 <body>
 
-  <h2>Add Student</h2>
+<h2>Add Student</h2>
 
-  <form action="/add" method="POST">
-
-    <input 
-      type="text" 
-      name="name" 
-      placeholder="Enter Name" 
-      required
-    />
-    <br><br>
-
-    <input 
-      type="text" 
-      name="fatherName" 
-      placeholder="Enter Father Name" 
-      required
-    />
-    <br><br>
-
-    <button type="submit">Save</button>
-
-  </form>
+<form action="/add" method="POST">
+  <input type="text" name="name" placeholder="Name" required />
+  <br><br>
+  <input type="text" name="fatherName" placeholder="Father Name" required />
+  <br><br>
+  <button type="submit">Save</button>
+</form>
 
 </body>
 </html>
