--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,17 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="/profie" method="post">
-     
-    <input type="text" placeholder="enter-your-neam">
-
-    <br>
-    <br>
-    <input type="text" placeholder="password">
-
-
-    <button>submit</button>
-
+  <form action="/add-home" method="post">
+     <input type="text" name="houseneam" placeholder="enter your house neam">
+     <input type="submit">
   </form>
 </body>
 </html>
