--- a/views/homeadade.html
+++ b/views/homeadade.html
@@ -6,9 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="/add-home" method="post">
-     <input type="text" name="houseneam" placeholder="enter your house neam">
-     <input type="submit">
-  </form>
+  <header>
+      <h1>Register home successful</h1>
+      </header>
+      <main>
+    <a href="/host/add-home">Add another home</a>
+    </main>
 </body>
 </html>
